--- a/k8s/simple-web-app.yaml
+++ b/k8s/simple-web-app.yaml
@@ -9,7 +9,7 @@ spec:
     - name: simple-web-app
       image: supermiguel/simple-web-app
       args:
-        - "-FRUIT=apple"
+        - "FRUIT=apple"
 
 ---
 
